[tool.poetry]
name = "spaceflights"
version = "0.1.0"
description = ""
authors = ["Alessio <alessio.caciagli@okra.ai>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
kedro = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
