[tool.kedro]
package_name = "spaceflights"
project_name = "spaceflights"
project_version = "0.17.0"

[tool.poetry]
name = "spaceflights"
version = "0.1.0"
description = ""
authors = ["Alessio <alessio.caciagli@okra.ai>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.9"
kedro = "^0.17.0"
ipython = "^7.19.0"
pandas = "^1.2.1"
xlrd = "^2.0.1"
openpyxl = "^3.0.6"
scikit-learn = "^0.24.1"
kedro-viz = "^3.8.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
